Updated answer controller problem in exam getAll service