@@ -2,13 +2,17 @@ package com.exammanagament.service.impl;
 
 import com.exammanagament.dto.AnswerDto;
 import com.exammanagament.entity.Answer;
+import com.exammanagament.exception.NotFoundException;
 import com.exammanagament.map.AnswerMap;
+import com.exammanagament.map.QuestionMapper;
 import com.exammanagament.repository.AnswerRepository;
 import com.exammanagament.service.AnswerService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -17,43 +21,64 @@ public class AnswerServiceImpl implements AnswerService {
     private final AnswerRepository repository;
     private final AnswerMap answerMap;
 
+    private final QuestionMapper questionMapper;
+
     @Override
-    public AnswerDto createAnswer(AnswerDto answerDto) {
-        return answerMap.mapToAnswerDto(repository.save(answerMap.mapToAnswer(answerDto)));
+    @Transactional
+    public void createAnswer(AnswerDto answerDto) {
+        Answer answer = answerMap.mapToAnswer(answerDto);
+        repository.save(answer);
+
+
+
+
     }
 
     @Override
     public List<AnswerDto> readAllAnswer() {
         return repository.findAll()
                 .stream()
-                .map(answerMap::mapToAnswerDto)
-                .toList();
+                .map(answer -> answerMap.mapToAnswerDto(answer))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public AnswerDto readById(long id) {
-        return answerMap.mapToAnswerDto(repository.findById(id).orElse(null));
+    public AnswerDto readById(long id) throws NotFoundException {
+
+        Answer answer = repository.findById(id).orElseThrow(() -> new NotFoundException("Verilmiş İD-li sual tapılmadı: " + id));
+        return answerMap.mapToAnswerDto(answer);
+
     }
 
     @Override
-    public AnswerDto updateAnswer(long id, AnswerDto answerDto) {
-        Answer oldAnswer1 = repository.findById(id).orElse(null);
-        AnswerDto oldAnswer = answerMap.mapToAnswerDto(oldAnswer1);
-        if (oldAnswer != null) {
-            oldAnswer.setOption(answerDto.getOption());
-            oldAnswer.setCorrect(answerDto.isCorrect());
-            return answerMap.mapToAnswerDto(repository.save(answerMap.mapToAnswer(oldAnswer)));
+    @Transactional
+    public void updateAnswer(long id, AnswerDto answerDto) {
+        Answer answer = repository.findById(id).orElseThrow(() -> new NotFoundException("Verilmiş İD-li sual tapılmadı: " + id));
 
-        } else {
-            return null;
+        if(answerDto.getQuestionDTO()!=null) {
+            answer.setQuestion(questionMapper.questionDTOToQuestion(answerDto.getQuestionDTO()));
         }
 
+        answer.setOption(answerDto.getOption());
+        answer.setCorrect(answerDto.isCorrect());
+
+        try {
+            repository.save(answer);
+        } catch (Exception ex) {
+
+            ex.printStackTrace();
+        }
+
+
     }
 
     @Override
+    @Transactional
     public void deleteAnswer(long id) {
         if (repository.existsById(id)) {
             repository.deleteById(id);
+        }else{
+            throw new NotFoundException("Verilmiş İD-li sual tapılmadı:" + id);
         }
 
     }
