@@ -1,56 +1,88 @@
 package com.exammanagament.service.impl;
 
 import com.exammanagament.dto.ExamDTO;
-import com.exammanagament.exception.UserNotFoundExcemtion;
+import com.exammanagament.entity.Exam;
+import com.exammanagament.exception.NotFoundException;
 import com.exammanagament.map.ExamMapper;
 import com.exammanagament.repository.ExamRepository;
 import com.exammanagament.service.ExamService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.sql.SQLException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class ExamServiceImpl implements ExamService {
     private final ExamRepository repository;
     private final ExamMapper mapper;
+
     @Override
-    public ExamDTO creat(ExamDTO examDTO) {
-        return mapper.examToExamDTO(repository.save(mapper.examDTOtoExam(examDTO)));
+    @Transactional(rollbackFor = {SQLException.class, RuntimeException.class})
+    public void creat(ExamDTO examDTO) {
+        Exam exam = mapper.examDTOtoExam(examDTO);
+        try {
+            repository.save(exam);
+        } catch (Exception ex) {
+
+            throw new RuntimeException("Imtahan əlavə etmək mümkün olmadı.");
+
+        }
+
     }
 
     @Override
     public ExamDTO findById(Long id) {
-        return mapper.examToExamDTO(repository.findById(id).orElse(null));
+        Exam exam = repository.findById(id).orElseThrow(() -> new NotFoundException("Bu id-li imtahan tapılmadı: " + id));
+        return mapper.examToExamDTO(exam);
     }
 
     @Override
     public List<ExamDTO> findAll() {
         return repository.findAll().stream()
                 .map(mapper::examToExamDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public ExamDTO updateById(Long id, ExamDTO examDTO) throws UserNotFoundExcemtion {
-        ExamDTO old = mapper.examToExamDTO(repository.findById(id).orElse(null));
-        if (old!=null){
-        old.setAdminId(examDTO.getAdminId());
-        old.setExamTypeId(examDTO.getExamTypeId());
-        old.setStartDate(examDTO.getStartDate());
-        old.setExamName(examDTO.getExamName());
-        old.setExamQuestionIds(examDTO.getExamQuestionIds());
-        old.setExamStudentIds(examDTO.getExamStudentIds());
-        return mapper.examToExamDTO(repository.save(mapper.examDTOtoExam(old)));}
-        throw new UserNotFoundExcemtion("Could not find any users with id");
-    }
+    @Transactional(rollbackFor = SQLException.class)
+    public void updateById(Long id, ExamDTO examDTO) throws NotFoundException {
+        Exam exam = repository.findById(id).orElseThrow(() -> new NotFoundException("Belə bir imtahan cədvəli tapılmadı :( "));
 
-    @Override
-    public String deleteById(Long id) throws UserNotFoundExcemtion {
-        if (repository.existsById(id)){
-            repository.deleteById(id);
+        exam.setExamName(examDTO.getExamName());
+        exam.setExamQuestions(mapper.mapExamQuestionIdsToExamQuestions(examDTO.getExamQuestionIds()));
+        exam.setExamStudents(mapper.mapExamStudentIdsToExamStudents(examDTO.getExamStudentIds()));
+        exam.setExamType(mapper.mapLongToExamType(examDTO.getExamTypeId()));
+        exam.setStartDate(examDTO.getStartDate());
+        exam.setAdmin(mapper.mapLongToExamAdmin(examDTO.getAdminId()));
+
+        try {
+            repository.save(exam);
+        } catch (Exception ex) {
+            throw new RuntimeException("Imtahanı yeniləmək mümkün olmadı : " + id, ex);
         }
-        throw new UserNotFoundExcemtion("Could not find any users with id");
+
+
     }
+
+
+    @Override
+    @Transactional(rollbackFor = {SQLException.class, RuntimeException.class})
+    public void deleteById(Long id) {
+        if (repository.existsById(id)) {
+
+            try {
+
+                repository.deleteById(id);
+            } catch (RuntimeException ex) {
+                throw new RuntimeException("Imtahanı silmək mümkün olmadı : " + id, ex);
+            }
+        } else throw new NotFoundException("Bu id-li Imtahan tapılmadı: " + id);
+
+    }
+
+
 }
